@@ -1,3 +1,7 @@
+[6 June 2008][
+
+* Rename :conditions to :if and allow multiple blocks/symbols.
+
 [27 May 2008]
 
 * Fix #first and #last after last record destroyed.
